--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,15 @@ tr:nth-child(even){background-color:#f2f2f2;}
 /* Estilo de las imágenes */
 img{width:100px;height:auto;}
 
+/* Estilo para la imagen del mapa */
+#contenido img[usemap] {
+    width: 100%; /* Ancho completo */
+    max-width: 800px; /* Tamaño máximo que se puede ajustar */
+    height: auto; /* Mantiene la relación de aspecto */
+    margin: 20px auto; /* Centrado */
+    display: block; /* Asegura que esté centrada */
+}
+
 /* Estilo para la imagen de portada */
 .portada{width:100%;height:400px;overflow:hidden;position:relative;margin-top:20px;}
 .portada-img{width:100%;height:100%;object-fit:cover;}
