--- a/styles.css
+++ b/styles.css
@@ -208,3 +208,80 @@ form input[type="radio"] {
     vertical-align: middle;
     height: 80px;
 }
+
+form {
+    margin-top: 20px;
+    background-color: #fff;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+form h2 {
+    color: #333;
+    text-align: center;
+    margin-bottom: 15px;
+    font-size: 20px;
+}
+
+form label {
+    font-weight: bold;
+    color: #555;
+    display: block;
+    margin-top: 10px;
+}
+
+form input[type="text"],
+form input[type="email"],
+form input[type="tel"],
+form input[type="date"],
+form select,
+form textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 8px 0;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-sizing: border-box;
+    font-size: 16px;
+    background-color: #f9f9f9;
+}
+
+form textarea {
+    resize: none;
+}
+
+form input[type="file"] {
+    margin-top: 8px;
+}
+
+form input[type="checkbox"] {
+    margin-right: 8px;
+}
+
+form .alinear-centro {
+    text-align: center;
+    margin-top: 20px;
+}
+
+form button {
+    background-color: #333;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+form button:hover {
+    background-color: #555;
+}
+
+form h1, form h2 {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #000;
+}
