--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,9 @@
-/* Estilo general del cuerpo */
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     margin: 0;
 }
 
-/* Encabezado */
 .header {
     background-color: #333;
     color: #fff;
@@ -13,7 +11,6 @@ body {
     text-align: center;
 }
 
-/* Navegación */
 .nav {
     background-color: #333;
     padding: 10px 0;
@@ -33,17 +30,15 @@ body {
 }
 
 .nav a:hover {
-    color: #ff6600; /* Color al pasar el mouse */
+    color: #ff6600;
 }
 
-/* Contenedor general */
 .container {
     width: 80%;
     margin: auto;
     overflow: hidden;
 }
 
-/* Estilo de la cuadrícula de piezas */
 .piezas-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -52,7 +47,6 @@ body {
     justify-items: center;
 }
 
-/* Estilo para cada pieza */
 .pieza-item {
     text-align: center;
     padding: 10px;
@@ -69,7 +63,6 @@ body {
     border-radius: 5px;
 }
 
-/* Estilo para las imágenes de los coches */
 table img {
     width: 150px;
     height: auto;
@@ -77,59 +70,54 @@ table img {
     border-radius: 5px;
 }
 
-/* Estilo de la tabla */
 table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
-    background-color: #fff; /* Color de fondo de la tabla */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra sutil para la tabla */
+    background-color: #fff;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
 }
 
 th {
-    background-color: #333; /* Color de fondo del encabezado */
+    background-color: #333; 
     color: white;
-    padding: 12px; /* Padding aumentado para más espacio */
-    border: 2px solid #000; /* Bordes más definidos */
+    padding: 12px; 
+    border: 2px solid #000; 
 }
 
 td {
-    padding: 10px; /* Padding aumentado para más espacio */
+    padding: 10px; 
     text-align: center;
-    border: 2px solid #ddd; /* Bordes más definidos */
-    background-color: #f9f9f9; /* Color de fondo de las celdas */
+    border: 2px solid #ddd;
+    background-color: #f9f9f9; 
 }
 
 tr:nth-child(even) {
-    background-color: #f2f2f2; /* Color de fondo para filas pares */
+    background-color: #f2f2f2; 
 }
 
 tr:hover {
-    background-color: #eaeaea; /* Cambio de color al pasar el ratón sobre la fila */
+    background-color: #eaeaea;
 }
 
-/* Estilo para centrar el texto */
 .alinear-centro {
-    text-align: center; /* Alinea el texto al centro */
-    margin: 20px 0; /* Añade margen superior e inferior para más espacio */
+    text-align: center; 
+    margin: 20px 0; 
 }
 
-/* Estilo de las imágenes */
 img {
     width: 100px;
     height: auto;
 }
 
-/* Estilo para la imagen del mapa */
 #contenido img[usemap] {
-    width: 100%; /* Ancho completo */
-    max-width: 800px; /* Tamaño máximo que se puede ajustar */
-    height: auto; /* Mantiene la relación de aspecto */
-    margin: 20px auto; /* Centrado */
-    display: block; /* Asegura que esté centrada */
+    width: 100%; 
+    max-width: 800px; 
+    height: auto; 
+    margin: 20px auto; 
+    display: block; 
 }
 
-/* Estilo para la imagen de portada */
 .portada {
     width: 100%;
     height: 400px;
@@ -144,7 +132,6 @@ img {
     object-fit: cover;
 }
 
-/* Estilo para el formulario de contacto */
 form {
     margin-top: 20px;
     background-color: #f9f9f9;
@@ -172,14 +159,14 @@ form textarea {
 }
 
 form input[type="file"] {
-    margin: 8px 0; /* Estilo para campo de archivo */
+    margin: 8px 0; 
 }
 
-/* Estilo para el botón de enviar */
 .tick-button {
     background-color: #000;
     color: white;
-    padding: 10px 20px;
+    padding: 8px 15px;  
+    font-size: 14px;    
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -188,18 +175,17 @@ form input[type="file"] {
 }
 
 .tick-button img {
-    width: 20px;
-    height: 20px;
-    margin-left: 5px;
+    width: 10px;     
+    height: 10px;     
+    margin-left: 8px;
 }
 
 .tick-button:hover {
-    background-color: #333; /* Cambiar color al pasar el ratón */
+    background-color: #333;
 }
 
-/* Estilo para los botones de radio */
 form input[type="radio"] {
-    margin-right: 5px; /* Espaciado entre el botón y la etiqueta */
+    margin-right: 5px; 
 }
 
 .rotado {
