--- a/styles.css
+++ b/styles.css
@@ -263,11 +263,33 @@ form button {
 }
 
 form button:hover {
-    background-color: #555;
+    background-color: #494949;
 }
 
 form h1, form h2 {
     text-transform: uppercase;
     font-weight: bold;
-    color: #000;
+    color: #494949;
+}
+
+.submit-button {
+    background-color: #494949;
+    color: white;
+    padding: 8px 15px;
+    font-size: 14px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+}
+
+.submit-button img {
+    width: 15px;  
+    height: 15px; 
+    margin-left: 8px;  
+}
+
+.submit-button:hover {
+    background-color: #333;
 }
